# mabo

./: .gitmodules  CMakeLists.txt  README.md  bfd.hpp  main.cpp  radare2.hpp
include/mabo/: bfd.hpp  binary.hpp  config.hpp  context.hpp  linkline.hpp  utility.hpp
include/mabo/binary/: bfd.hpp  binary.hpp  radare2.hpp
test/: CMakeLists.txt  chdir.hpp  gtest.patch  test.hpp
test/binary/: CMakeLists.txt  binary.cpp  context.cpp  main.cpp  main2.cpp  test1.cpp
test/link/: CMakeLists.txt  test2.cpp
